# name: TestFeatureFlagMatcher.test_db_matches_independent_of_string_or_number_type
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestFeatureFlagMatcher.test_db_matches_independent_of_string_or_number_type.1
  '
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_db_matches_independent_of_string_or_number_type.2
  '
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_db_matches_independent_of_string_or_number_type.3
  '
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_db_matches_independent_of_string_or_number_type.4
  '
  SELECT ((("posthog_person"."properties" -> 'Distinct Id') IN ('"307"')
           OR ("posthog_person"."properties" -> 'Distinct Id') IN ('307'))
          AND "posthog_person"."properties" ? 'Distinct Id'
          AND NOT (("posthog_person"."properties" -> 'Distinct Id') = 'null')) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = '307'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_db_matches_independent_of_string_or_number_type.5
  '
  SELECT (("posthog_person"."properties" -> 'Distinct Id') IN ('307')
          AND "posthog_person"."properties" ? 'Distinct Id'
          AND NOT (("posthog_person"."properties" -> 'Distinct Id') = 'null')) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = '307'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_db_matches_independent_of_string_or_number_type.6
  '
  SELECT (("posthog_person"."properties" -> 'Distinct Id') = '307'
          AND "posthog_person"."properties" ? 'Distinct Id'
          AND NOT (("posthog_person"."properties" -> 'Distinct Id') = 'null')) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = '307'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_multiple_flags
  '
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."team_id" = 2
  '
---
# name: TestFeatureFlagMatcher.test_multiple_flags.1
  '
  SELECT (("posthog_person"."properties" -> 'email') = '"test@posthog.com"'
          AND "posthog_person"."properties" ? 'email'
          AND NOT (("posthog_person"."properties" -> 'email') = 'null')) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_1",
         (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'test_id'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_multiple_flags.2
  '
  SELECT (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "posthog_group"
  WHERE ("posthog_group"."team_id" = 2
         AND "posthog_group"."group_key" = 'group_key'
         AND "posthog_group"."group_type_index" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_multiple_flags.3
  '
  SELECT (("posthog_group"."group_properties" -> 'name') IN ('"foo.inc"')
          AND "posthog_group"."group_properties" ? 'name'
          AND NOT (("posthog_group"."group_properties" -> 'name') = 'null')) AS "flag_X_condition_0",
         (("posthog_group"."group_properties" -> 'name') IN ('"foo2.inc"')
          AND "posthog_group"."group_properties" ? 'name'
          AND NOT (("posthog_group"."group_properties" -> 'name') = 'null')) AS "flag_X_condition_0"
  FROM "posthog_group"
  WHERE ("posthog_group"."team_id" = 2
         AND "posthog_group"."group_key" = 'foo'
         AND "posthog_group"."group_type_index" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_multiple_flags.4
  '
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."team_id" = 2
  '
---
# name: TestFeatureFlagMatcher.test_multiple_flags.5
  '
  SELECT (("posthog_person"."properties" -> 'email') = '"test@posthog.com"'
          AND "posthog_person"."properties" ? 'email'
          AND NOT (("posthog_person"."properties" -> 'email') = 'null')) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_1",
         (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'test_id'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_multiple_flags.6
  '
  SELECT (("posthog_group"."group_properties" -> 'name') IN ('"foo.inc"')
          AND "posthog_group"."group_properties" ? 'name'
          AND NOT (("posthog_group"."group_properties" -> 'name') = 'null')) AS "flag_X_condition_0",
         (("posthog_group"."group_properties" -> 'name') IN ('"foo2.inc"')
          AND "posthog_group"."group_properties" ? 'name'
          AND NOT (("posthog_group"."group_properties" -> 'name') = 'null')) AS "flag_X_condition_0"
  FROM "posthog_group"
  WHERE ("posthog_group"."team_id" = 2
         AND "posthog_group"."group_key" = 'foo2'
         AND "posthog_group"."group_type_index" = 2)
  '
---
# name: TestFeatureFlagMatcher.test_super_condition_matches_string
  '
  SELECT ((("posthog_person"."properties" -> 'is_enabled') = 'true'
           OR ("posthog_person"."properties" -> 'is_enabled') = '"true"')
          AND "posthog_person"."properties" ? 'is_enabled'
          AND NOT (("posthog_person"."properties" -> 'is_enabled') = 'null')) AS "flag_X_super_condition", ("posthog_person"."properties" -> 'is_enabled') IS NOT NULL AS "flag_X_super_condition_is_set",
                                                                                                                                                                          (("posthog_person"."properties" -> 'email') = '"fake@posthog.com"'
                                                                                                                                                                           AND "posthog_person"."properties" ? 'email'
                                                                                                                                                                           AND NOT (("posthog_person"."properties" -> 'email') = 'null')) AS "flag_X_condition_0",
                                                                                                                                                                          (("posthog_person"."properties" -> 'email') = '"test@posthog.com"'
                                                                                                                                                                           AND "posthog_person"."properties" ? 'email'
                                                                                                                                                                           AND NOT (("posthog_person"."properties" -> 'email') = 'null')) AS "flag_X_condition_1",
                                                                                                                                                                          (true) AS "flag_X_condition_2"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'test_id'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging
  '
  
  SET LOCAL statement_timeout = 2
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.1
  '
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM posthog_persondistinctid
     WHERE team_id = 2
       AND distinct_id IN ('other_id',
                           'example_id') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM posthog_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) )
  SELECT key
  FROM posthog_featureflag
  WHERE team_id = 2
    AND ensure_experience_continuity = TRUE
    AND active = TRUE
    AND deleted = FALSE
    AND key NOT IN
      (SELECT feature_flag_key
       FROM existing_overrides)
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.2
  '
  
  SET LOCAL statement_timeout = 2
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.3
  '
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM posthog_persondistinctid
     WHERE team_id = 2
       AND distinct_id IN ('other_id',
                           'example_id') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM posthog_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) ),
       flags_to_override AS
    (SELECT key
     FROM posthog_featureflag
     WHERE team_id = 2
       AND ensure_experience_continuity = TRUE
       AND active = TRUE
       AND deleted = FALSE
       AND key NOT IN
         (SELECT feature_flag_key
          FROM existing_overrides) )
  INSERT INTO posthog_featureflaghashkeyoverride (team_id, person_id, feature_flag_key, hash_key)
  SELECT team_id,
         person_id,
         key,
         'example_id'
  FROM flags_to_override,
       target_person_ids
  WHERE EXISTS
      (SELECT 1
       FROM posthog_person
       WHERE id = person_id
         AND team_id = 2) ON CONFLICT DO NOTHING
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.4
  '
  
  SET LOCAL statement_timeout = 2
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.5
  '
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM posthog_persondistinctid
     WHERE team_id = 2
       AND distinct_id IN ('other_id',
                           'example_id') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM posthog_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) ),
       flags_to_override AS
    (SELECT key
     FROM posthog_featureflag
     WHERE team_id = 2
       AND ensure_experience_continuity = TRUE
       AND active = TRUE
       AND deleted = FALSE
       AND key NOT IN
         (SELECT feature_flag_key
          FROM existing_overrides) )
  INSERT INTO posthog_featureflaghashkeyoverride (team_id, person_id, feature_flag_key, hash_key)
  SELECT team_id,
         person_id,
         key,
         'example_id'
  FROM flags_to_override,
       target_person_ids
  WHERE EXISTS
      (SELECT 1
       FROM posthog_person
       WHERE id = person_id
         AND team_id = 2) ON CONFLICT DO NOTHING
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.6
  '
  
  SET LOCAL statement_timeout = 2
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.7
  '
  SELECT "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."distinct_id" IN ('other_id',
                                                      'example_id')
         AND "posthog_persondistinctid"."team_id" = 2)
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_error_race_conditions_on_person_merging.8
  '
  SELECT "posthog_featureflaghashkeyoverride"."feature_flag_key",
         "posthog_featureflaghashkeyoverride"."hash_key",
         "posthog_featureflaghashkeyoverride"."person_id"
  FROM "posthog_featureflaghashkeyoverride"
  WHERE ("posthog_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "posthog_featureflaghashkeyoverride"."team_id" = 2)
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging
  '
  
  SET LOCAL statement_timeout = 2
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.1
  '
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM posthog_persondistinctid
     WHERE team_id = 2
       AND distinct_id IN ('other_id',
                           'example_id') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM posthog_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) )
  SELECT key
  FROM posthog_featureflag
  WHERE team_id = 2
    AND ensure_experience_continuity = TRUE
    AND active = TRUE
    AND deleted = FALSE
    AND key NOT IN
      (SELECT feature_flag_key
       FROM existing_overrides)
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.2
  '
  
  SET LOCAL statement_timeout = 2
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.3
  '
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM posthog_persondistinctid
     WHERE team_id = 2
       AND distinct_id IN ('other_id',
                           'example_id') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM posthog_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) ),
       flags_to_override AS
    (SELECT key
     FROM posthog_featureflag
     WHERE team_id = 2
       AND ensure_experience_continuity = TRUE
       AND active = TRUE
       AND deleted = FALSE
       AND key NOT IN
         (SELECT feature_flag_key
          FROM existing_overrides) )
  INSERT INTO posthog_featureflaghashkeyoverride (team_id, person_id, feature_flag_key, hash_key)
  SELECT team_id,
         person_id,
         key,
         'example_id'
  FROM flags_to_override,
       target_person_ids
  WHERE EXISTS
      (SELECT 1
       FROM posthog_person
       WHERE id = person_id
         AND team_id = 2) ON CONFLICT DO NOTHING
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.4
  '
  
  SET LOCAL statement_timeout = 2
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.5
  '
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM posthog_persondistinctid
     WHERE team_id = 2
       AND distinct_id IN ('other_id',
                           'example_id') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM posthog_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) ),
       flags_to_override AS
    (SELECT key
     FROM posthog_featureflag
     WHERE team_id = 2
       AND ensure_experience_continuity = TRUE
       AND active = TRUE
       AND deleted = FALSE
       AND key NOT IN
         (SELECT feature_flag_key
          FROM existing_overrides) )
  INSERT INTO posthog_featureflaghashkeyoverride (team_id, person_id, feature_flag_key, hash_key)
  SELECT team_id,
         person_id,
         key,
         'example_id'
  FROM flags_to_override,
       target_person_ids
  WHERE EXISTS
      (SELECT 1
       FROM posthog_person
       WHERE id = person_id
         AND team_id = 2) ON CONFLICT DO NOTHING
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.6
  '
  
  SET LOCAL statement_timeout = 2
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.7
  '
  SELECT "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."distinct_id" IN ('other_id',
                                                      'example_id')
         AND "posthog_persondistinctid"."team_id" = 2)
  '
---
# name: TestHashKeyOverridesRaceConditions.test_hash_key_overrides_with_simulated_race_conditions_on_person_merging.8
  '
  SELECT "posthog_featureflaghashkeyoverride"."feature_flag_key",
         "posthog_featureflaghashkeyoverride"."hash_key",
         "posthog_featureflaghashkeyoverride"."person_id"
  FROM "posthog_featureflaghashkeyoverride"
  WHERE ("posthog_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "posthog_featureflaghashkeyoverride"."team_id" = 2)
  '
---
